Additional features added

--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
@@ -23,9 +23,9 @@
         <li><a class="hoverable" href="./lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
-                <li><a class="hoverable" href="./lineupinfo.html#wednesday">Wednesday 13th</a></li>
-                <li><a class="hoverable" href="./lineupinfo.html#thursday">Thursday 14th</a></li>
-                <li><a class="hoverable" href="./lineupinfo.html#friday">Friday 15th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#wednesday">Wednesday 12th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#thursday">Thursday 13th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#friday">Friday 14th</a></li>
             </ul>
         </li>
         <li><a class="hoverable" href="./ticketinfo.html">Tickets &#9662;</a>
@@ -57,8 +57,7 @@
     <h2>Before you go, here are some things you might want to know...</h2>
     <section>
         <h3>How to get there...</h3>
-        <h4>You can <span class="lightblue">thank us</span> later, or ask us a question on our
-            <a href="http://facebook.com">facebook</a> page.</h4>
+        <h4>You can also ask us a question on our <a href="http://facebook.com">facebook</a> page.</h4>
         <p>The best way to get to Tide is by bike or public transport. The NMBS Hasselt Station is the public
             transport hub. Tide can be reached by train via Hasselt Station or Kiewit Station. Kiewit Station (one
             stop after Hasselt Station) is within walking distance of the festival site (only 500 m).</p>
@@ -205,7 +204,8 @@
             festival site.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Am i allowed to take photographs or videos?
+        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Am i allowed to take photographs or
+            videos?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> Taking photographs in a private capacity is basically permitted. Only 35mm cameras, simple SLR cameras
             and mobile phones with camera functions are allowed. Cameras with a zoom lens or with video functions as
@@ -215,7 +215,8 @@
             are allowed on the camping sites.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Can I copyright my photos of the festival?
+        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Can I copyright my photos of the
+            festival?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> By entering the festival site, the festival visitor willingly and
             irrevocably allows the nonpaid use of his image or voice for photography, live transmissions, broadcasts
@@ -291,7 +292,8 @@
             links provided. Early booking recommended. Head over to www.carderobe.com for further information.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/diamond.png" alt="diamond"> Where is the lost and found on the terrain?
+        <dt><img class="icon" src="../images/icons/diamond.png" alt="diamond"> Where is the lost and found on the
+            terrain?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> During the festival, a lost and found booth will be located at the festival entrance. On Monday, our
             lost and found will be located at the Bundesstraße. From Tuesday on, you can contact: Lost and Found
