--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
@@ -23,9 +23,9 @@
         <li><a class="hoverable" href="./lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
-                <li><a class="hoverable" href="./lineupinfo.html#wednesday">Wednesday 13th</a></li>
-                <li><a class="hoverable" href="./lineupinfo.html#thursday">Thursday 14th</a></li>
-                <li><a class="hoverable" href="./lineupinfo.html#friday">Friday 15th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#wednesday">Wednesday 12th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#thursday">Thursday 13th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#friday">Friday 14th</a></li>
             </ul>
         </li>
         <li><a class="active" href="./ticketinfo.html">Tickets &#9662;</a>
@@ -61,7 +61,6 @@
     </header>
     <section>
         <h3>Where do I get tickets?</h3>
-        <h4>13 January 2016</h4>
         <p> Tickets can be bought digitally on the Tide website and from the Tide Ambassadors spread all over the world.
             As usual the Tide ticket prices are decided taking social awareness into consideration: Flexible prices to
             suit the different economic realities of each country. What kind of tickets can i get? How much do they
@@ -72,8 +71,7 @@
             of age!</p>
     </section>
     <section>
-        <h3>Pricing</h3>
-        <h4>25 December 2015</h4>
+        <h3>Ticket pricing</h3>
         <p>We have chosen to have less ticket phases compared with previous editions to allow you more time to acquire a
             ticket in each phase (there are three phases in 2016 and not four phases as in 2014). We don’t increase the
             highest price of the tickets (which remains at 180 €). We applied an average between the previous 3 ticket
