--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/guns.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/guns.html
@@ -196,7 +196,7 @@
 <!-- Footer with 3 columns: -->
 <footer>
     <section class="column">
-        <h4>Other stuff</h4>
+        <h4>More info</h4>
         <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../lineupinfo.html">Line-up</a></li>
