--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
@@ -120,7 +120,6 @@
             many of them speak Portuguese only. Please be mindful and respectful of the
             locals when you are travelling in the area. Having a good relationship with the
             locals is fundamental for the continuation of the festival!
-            4.
         </p>
     </section>
     <section>
@@ -186,7 +185,7 @@
             broken out and even if it seems under control and seems to have even been extinguished.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/error.png" alt="error">Which objects are not allowed at the festival?
+        <dt><img class="icon" src="../images/icons/error.png" alt="error">Are there any forbidden objects?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> It is forbidden to bring any type of glass container, canister, plastic bottles, PET bottles, cans
             and/or special drink containers, your own food, hard packaging, cool-bags, special containers, torches,
@@ -204,8 +203,7 @@
             festival site.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Am i allowed to take photographs or
-            videos?
+        <dt><img class="icon" src="../images/icons/photo-camera.png" alt="camera">Am i allowed to take photographs?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> Taking photographs in a private capacity is basically permitted. Only 35mm cameras, simple SLR cameras
             and mobile phones with camera functions are allowed. Cameras with a zoom lens or with video functions as
@@ -255,7 +253,7 @@
             environment.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/info.png" alt="info"> Where can I find information at the festival?
+        <dt><img class="icon" src="../images/icons/info.png" alt="info"> Where can I get more info at the festival?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> Information can be found at many points. Security are always available and will ensure that they will
             give you the corresponding information to help you.
@@ -292,8 +290,7 @@
             links provided. Early booking recommended. Head over to www.carderobe.com for further information.
         </dd>
 
-        <dt><img class="icon" src="../images/icons/diamond.png" alt="diamond"> Where is the lost and found on the
-            terrain?
+        <dt><img class="icon" src="../images/icons/diamond.png" alt="diamond"> Where is the lost and found?
             <img class="icon expand" src="../images/icons/expand.png" alt="expand"></dt>
         <dd> During the festival, a lost and found booth will be located at the festival entrance. On Monday, our
             lost and found will be located at the Bundesstraße. From Tuesday on, you can contact: Lost and Found
@@ -316,7 +313,7 @@
 <!-- Footer with 3 columns: -->
 <footer>
     <section class="column">
-        <h4>Other stuff</h4>
+        <h4>More info</h4>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="lineupinfo.html">Line-up</a></li>
