--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
@@ -56,9 +56,7 @@
 
 <!-- Content: -->
 <article>
-    <header>
-        <h2>Latest news</h2>
-    </header>
+    <h2>Tickets</h2>
     <section>
         <h3>Where do I get tickets?</h3>
         <p> Tickets can be bought digitally on the Tide website and from the Tide Ambassadors spread all over the world.
@@ -89,7 +87,7 @@
 <!-- Footer with 3 columns: -->
 <footer>
     <section class="column">
-        <h4>Other stuff</h4>
+        <h4>More info</h4>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="lineupinfo.html">Line-up</a></li>
