--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/ticketconfirm.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/ticketconfirm.html
@@ -45,7 +45,7 @@
 <!-- Background banner, title text and buttons: -->
 <!-- Banner, intro text and buttons: -->
 <header class="banner ticketsbanner">
-    <section class="ticketconfirmation">
+    <section class="noticecontainer">
         <h3 class="notice">Thank you for your order</h3>
         <p class="notice">An email has been sent to you with further details about your order, please check your
             Junk/Spam Folder.</p>
@@ -61,7 +61,7 @@
 <!-- Footer with 3 columns: -->
 <footer>
     <section class="column">
-        <h4>Other stuff</h4>
+        <h4>More info</h4>
         <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="../lineupinfo.html">Line-up</a></li>
