--- a/Javascript/week3/2016_Slides_Opdracht02/index.html
+++ b/Javascript/week3/2016_Slides_Opdracht02/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Slides_Opdracht02</title>
- <!--   <link href="style/groet.css" rel="stylesheet" /> -->
+    <link href="style/groet.css" rel="stylesheet" />
     <script src="js/vraag.js"></script>
 </head>
 <body>
