--- a/Javascript/week3/Opdracht1/index.html
+++ b/Javascript/week3/Opdracht1/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="utf-8"/>
     <title>Slides_Opdracht01</title>
-    <link href="style/hello.css" rel="stylesheet" />
+    <link href="style/hello.css" rel="stylesheet"/>
     <script src="js/hello.js"></script>
 </head>
 <body>
-<form>
+<form id="form" name="form">
     <fieldset>Bericht:
-    <textarea id="bericht" title="bericht"></textarea>
-        <button type="submit">Verzend</button>
+        <textarea id="bericht" title="bericht"></textarea>
+        <button id="btn">Click me.</button>
     </fieldset>
 </form>
-<article>
-    Je hebt het volgende bericht ingegeven:
-    <span></span>
-</article>
+Je hebt het volgende bericht ingegeven:
+<p id="demo"></p>
 </body>
 </html>
