Finished up W3 tasks

--- a/Javascript/week3/Opdracht6/index.html
+++ b/Javascript/week3/Opdracht6/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 <p>
-    <label for="input">Invoer:</label>
-    <input type="text" id="input" />
+    <label for="mySelect">Select movie:</label>
+    <select name="select" id="mySelect">
+        <option value="night">The Dark Night</option>
+        <option id="test" value="memento">Memento</option>
+        <option value="inception">Inception</option>
+    </select>
 </p>
-</body>
+<p id="selected"></p>
 </html>
