Last edits for JS

--- a/Javascript/week3/Opdracht7/index.html
+++ b/Javascript/week3/Opdracht7/index.html
@@ -9,5 +9,11 @@
 <body>
 <h3 id="hier">Klik hier</h3>
 <p>Button clicked: <span id="welke">&nbsp;</span></p>
+
+<ul id="bla">
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ul>
 </body>
 </html>
