--- a/Javascript/week6/Slides_Oefeningen_Week6(1)/Slides_Opgave03/countdownstop.html
+++ b/Javascript/week6/Slides_Oefeningen_Week6(1)/Slides_Opgave03/countdownstop.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Countdown for 10 seconds</h2>
-    <p><button id="start">Start</button>&nbsp;
+    <p><button id="start">Start</button>
        <button id="stop">Stop</button></p>
     <p>Time: <span id="timer"></span></p>
 </body>
