--- a/Javascript/week6/Tasks/Task3/index.html
+++ b/Javascript/week6/Tasks/Task3/index.html
@@ -6,8 +6,18 @@
     <title>Title</title>
     <script src="scripts/script.js"></script>
 </head>
-<body>
-<h2>Test reverse String functie</h2>
-<p>Toegepaste Informatica omgekeerd is <span id="omgekeerd"></span></p>
-</body>
+<h2>Test Gadget class "live" prototype</h2>
+<p>Na klikken wijzigen we de eigenschappen van de klasse en maken dan een tweede
+    object</p>
+<div>
+    <h4>Object 1</h4>
+    <p>Function whatAreYou: <span id="what"></span></p>
+    <p>Function getinfo: <span id="info"></span></p>
+</div>
+<div>
+    <h4>Object 2</h4>
+    <p>Function whatAreYou: <span id="what_"></span></p>
+    <p>Function getinfo: <span id="info_"></span></p>
+</div>
+<p><input type="button" id="change" value="Verander"/></p>
 </html>
