--- a/Javascript/week3/2016_Slides_Opdracht03/index.html
+++ b/Javascript/week3/2016_Slides_Opdracht03/index.html
@@ -13,6 +13,6 @@
         <li>Groen</li>
         <li>Blauw</li>
     </ul>
-    <p>De lijst bevat <span></span> kleuren</p>
+    <p>De lijst bevat <span class="aantal"></span> kleuren</p>
 </body>
 </html>
